exports[`Bemlinter of crossed styled files should log error on both blocks 1`] = `
"  ✗ external
[leak.scss:8] Error: \".c-external\" should not be styled outside of its own stylesheet.
  ✗ leak
[leak.scss:8] Error: \".c-external\" is incoherent with the file name, \".c-leak\" expected.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;

exports[`Bemlinter of crossed styled files should not log error on the external block 1`] = `
"  ✗ leak
[leak.scss:8] Error: \".c-external\" is incoherent with the file name, \".c-leak\" expected.

FAIL: bemlinter has detected 1 error on 1 block."
`;

exports[`Bemlinter of multi-modules files should detect the module and the associate leak styles 1`] = `
"  ✗ unprefixed
[unprefixed.scss:8] Error: \".c-prefixed\" is incoherent with the file name, \".unprefixed\" expected.
  ✗ module / prefixed
[unprefixed.scss:8] Error: \".c-prefixed\" should not be styled outside of its own stylesheet.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;

exports[`Bemlinter of multi-modules files should detect the module and the missing prefix 1`] = `
"  ✗ unprefixed
[unprefixed.scss:8] Error: \".c-prefixed\" is incoherent with the file name, \".unprefixed\" expected.
  ✗ module / prefixed
[module-prefixed.scss:1] Error: \".c-prefixed\" is incoherent with the file name, \".prefixed\" expected.

FAIL: bemlinter has detected 2 errors on 2 blocks."
`;
